# binary-clock-wallpaper

./: .gitignore  Cargo.toml
src/: color.rs  config.rs  lib.rs  main.rs  position.rs  time_convention.rs
